update in Profile image

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 		<div class="container-fluid Profile-Summery-container">
 			<div class="row">
 				<div class="col-lg-6 ">
-					<img class="personal-image" src="Images\Profile.jpg" alt="" width="75%" height="75%" alt="personal-image">
+					<img class="personal-image" src="Images\Profile.JPG" alt="" width="75%" height="75%" alt="personal-image">
 				</div>
 				<div class="col-lg-6">
 					<p class="font2">With More than 25 years of experience, 
